[gd_scene load_steps=3 format=3 uid="uid://cpft81r5n07eq"]

[ext_resource type="Script" path="res://GameObjects/Controls/Dialog.gd" id="1_uitop"]
[ext_resource type="Script" path="res://GameObjects/Controls/Button.gd" id="2_l0hka"]

[node name="Dialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uitop")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = 274.0
offset_top = 193.0
offset_right = 926.0
offset_bottom = 432.0

[node name="MainText" type="RichTextLabel" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -311.0
offset_top = -106.5
offset_right = 456.0
offset_bottom = 102.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
text = "Test test test test tes"

[node name="RightButton" type="TextureButton" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.739
anchor_top = 0.636
anchor_right = 0.739
anchor_bottom = 0.636
offset_left = -75.328
offset_top = -20.128
offset_right = 75.672
offset_bottom = 19.872
action_mode = 0
script = ExtResource("2_l0hka")
metadata/_edit_use_anchors_ = true

[node name="Label" type="RichTextLabel" parent="CanvasLayer/RightButton"]
layout_mode = 0
offset_top = 8.0
offset_right = 151.0
offset_bottom = 33.0
mouse_filter = 2
bbcode_enabled = true
text = "[center]Next[/center]"

[node name="MiddleButton" type="TextureButton" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.526
anchor_top = 0.633
anchor_right = 0.526
anchor_bottom = 0.633
offset_left = -169.952
offset_top = -20.184
offset_right = 171.048
offset_bottom = 19.816
action_mode = 0
script = ExtResource("2_l0hka")
metadata/_edit_use_anchors_ = true

[node name="Label" type="RichTextLabel" parent="CanvasLayer/MiddleButton"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.25
anchor_bottom = 0.25
offset_left = 1.0
offset_right = 338.0
offset_bottom = 25.0
mouse_filter = 2
bbcode_enabled = true
text = "[center]Next[/center]"
metadata/_edit_use_anchors_ = true

[node name="LeftButton" type="TextureButton" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.663
anchor_top = 0.818
anchor_right = 0.663
anchor_bottom = 0.818
offset_left = -485.776
offset_top = -141.064
offset_right = -334.776
offset_bottom = -101.064
action_mode = 0
script = ExtResource("2_l0hka")
metadata/_edit_use_anchors_ = true

[node name="Label" type="RichTextLabel" parent="CanvasLayer/LeftButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0198676
anchor_top = 0.025
anchor_right = 0.0198676
anchor_bottom = 0.025
offset_left = -3.0
offset_top = 9.0
offset_right = 148.0
offset_bottom = 34.0
mouse_filter = 2
bbcode_enabled = true
text = "[center]Next[/center]"
metadata/_edit_use_anchors_ = true

[connection signal="answered" from="CanvasLayer/RightButton" to="." method="_on_button_answered"]
[connection signal="pressed" from="CanvasLayer/RightButton" to="CanvasLayer/RightButton" method="_on_pressed"]
[connection signal="answered" from="CanvasLayer/MiddleButton" to="." method="_on_button_answered"]
[connection signal="pressed" from="CanvasLayer/MiddleButton" to="CanvasLayer/MiddleButton" method="_on_pressed"]
[connection signal="answered" from="CanvasLayer/LeftButton" to="." method="_on_button_answered"]
[connection signal="pressed" from="CanvasLayer/LeftButton" to="CanvasLayer/LeftButton" method="_on_pressed"]
